# BeFree

./: CMakeLists.txt  ConfigureChecks.cmake  LGPL-HEADER  README.md
cmake/modules/: BeFreeDefaults.cmake  CMakeLists.txt  EnsureOutOfSourceBuild.cmake  EnsureVersion.cmake
data/: CMakeLists.txt
data/etc/: CMakeLists.txt  directfbrc.app_server  termcap
data/etc/fonts/: CMakeLists.txt
data/etc/fonts/psfonts/: CMakeLists.txt  bchbi.pfb  bchri.pfb
data/etc/fonts/ttfonts/: CMakeLists.txt
data/etc/fortune/: CMakeLists.txt
data/system/boot/: Bootscript  InstallerFinishScript  InstallerInitScript  Netscript  SetupEnvironment
kits/: AppKit.h  Be.h  CMakeLists.txt  InterfaceKit.h  KernelKit.h  NetKit.h  RenderKit.h  StorageKit.h  SupportKit.h  XmlKit.h  befree-fsh.h.cmake
kits/add-ons/: CMakeLists.txt
kits/add-ons/font/: CMakeLists.txt  FontEngine.cpp  FontEngine.h  FreeType2.cpp
kits/add-ons/graphics/: CMakeLists.txt  GraphicsEngine.cpp  GraphicsEngine.h
kits/add-ons/theme/: CMakeLists.txt  DefaultTheme.cpp  ThemeEngine.cpp  ThemeEngine.h  XX
kits/app/: AppDefs.h  Application.cpp  Application.h  CMakeLists.txt  Clipboard.cpp  Clipboard.h  Cursor.cpp  Cursor.h  Handler.cpp  Handler.h  Invoker.cpp  Invoker.h  Looper.cpp  Looper.h  Message.cpp  Message.h  MessageFilter.cpp  MessageFilter.h  MessageQueue.cpp  MessageQueue.h  MessageRunner.cpp  MessageRunner.h  Messenger.cpp  Messenger.h
kits/interface/: Alert.cpp  Alert.h  Bitmap.cpp  Bitmap.h  Box.cpp  Box.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ColorControl.cpp  ColorControl.h  Control.cpp  Control.h  Font.cpp  Font.h  GraphicsDefs.cpp  GraphicsDefs.h  Input.h  InterfaceDefs.h  LimitedView.cpp  LimitedView.h  ListItem.cpp  ListItem.h  ListView.cpp  ListView.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MenuField.cpp  MenuField.h  MenuItem.cpp  MenuItem.h  OutlineListView.cpp  OutlineListView.h  Point.cpp  Point.h  Polygon.cpp  (+35 more)
kits/interface/directfb/: etk-application.cpp  etk-dfb-font.cpp  etk-dfb.h  etk-drawing.cpp  etk-pixmap.cpp  etk-window.cpp  etk-wm-ORIG  etk-wm.cpp
kits/interface/icons/: idea.xpm  info.xpm  stop.xpm  warning.xpm
kits/interface/layout/: Layout.h  LayoutContainer.cpp  LayoutForm.cpp  LayoutItem.cpp
kits/kernel/: CMakeLists.txt  Debug.cpp  Debug.h  Kernel.h  OS.h  area.cpp  image.cpp  locker.cpp  os.cpp  port.cpp  semaphore.cpp  thread.cpp  timefuncs.cpp
kits/net/: CMakeLists.txt  NetAddress.cpp  NetAddress.h  NetBuffer.cpp  NetBuffer.h  NetDebug.cpp  NetDebug.h  NetEndpoint.cpp  NetEndpoint.h
kits/private/: CMakeLists.txt  Token.cpp  Token.h
kits/render/: ArcGenerator.cpp  ArcGenerator.h  CMakeLists.txt  LineGenerator.cpp  LineGenerator.h  Pixmap.cpp  Pixmap.h  Render.cpp  Render.h
kits/storage/: CMakeLists.txt  Directory.cpp  Directory.h  Entry.cpp  Entry.h  File.cpp  File.h  FilePanel.cpp  FilePanel.h  FindDirectory.cpp  FindDirectory.h  Path.cpp  Path.h  StorageDefs.h  Volume.cpp  Volume.h  VolumeRoster.cpp  VolumeRoster.h
kits/storage/icons/: file.xpm  folder.xpm  volume.xpm
kits/support/: Archivable.cpp  Archivable.h  Autolock.h  ByteOrder.c  ByteOrder.h  CMakeLists.txt  ClassInfo.h  DataIO.cpp  DataIO.h  Errors.h  List.cpp  List.h  Locker.cpp  Locker.h  SimpleLocker.cpp  SimpleLocker.h  String.cpp  String.h  StringArray.cpp  StringArray.h  SupportDefs.h
kits/xml/: CMakeLists.txt  SimpleXmlParser.cpp  SimpleXmlParser.h
servers/app/: CMakeLists.txt
servers/app/wm/: CMakeLists.txt  FLOW  IDEAS  context.c  context.h  decoration.c  decoration.h  device.c  device.h  input_channel.c  input_channel.h  input_events.h  input_switch.c  input_switch.h  internal.h  prophecy.c  prophecywm.c  prophecywm.h  stret.c  stret.h  stret_iteration.c  stret_iteration.h  stret_test.c  test_color.c  test_foo.c  types.h  uwmdump.c  window.c  window.h
servers/app/wm/classes/: foo.c  frame.c  root.c  window.c
servers/app/wm/data/: foo.h
servers/app/wm/devices/: keyboard.c  pointer.c  wheel.c
tests/: CMakeLists.txt
tests/interface/: CMakeLists.txt
tests/kernel/: CMakeLists.txt  semaphore-locking-test.c  semaphore-test.c  thread-exit-test.c  thread-suspend-test.cpp  thread-test.c  time-test.c
